--- a/hiroki/html-google-homepage/index.html
+++ b/hiroki/html-google-homepage/index.html
@@ -24,7 +24,7 @@
             src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
             alt="Google"
           />
-          <input autofocus type="text" placeholder="Search" />
+          <input autofocus type="search" placeholder="Search" />
           <button>Monday</button>
           <button>May</button>
         </div>
