--- a/hiroki/html-google-homepage/index.html
+++ b/hiroki/html-google-homepage/index.html
@@ -11,8 +11,14 @@
       <header>
         <div>
           <ul>
-            <li>Gmail</li>
-            <li>Images</li>
+            <li>
+              <a href="https://mail.google.com/mail/u/0/#inbox"> Gmail </a>
+            </li>
+            <li>
+              <a href="https://www.google.co.jp/imghp?hl=ja&authuser=0&ogbl"
+                >Images</a
+              >
+            </li>
             <li>menu icon</li>
             <li>my icon</li>
           </ul>
@@ -20,13 +26,15 @@
       </header>
       <section>
         <div>
-          <img
-            src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-            alt="Google"
-          />
+          <a href="https://www.google.com/?hl=ja">
+            <img
+              src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+              alt="Google"
+            />
+          </a>
           <input autofocus type="search" placeholder="Search" />
-          <button>Monday</button>
-          <button>May</button>
+          <button>Google検索</button>
+          <button>I'm Feeling Lucky</button>
         </div>
       </section>
       <footer>
