--- a/hiroki/html-google-homepage/index.html
+++ b/hiroki/html-google-homepage/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta content="origin" name="referrer" />
@@ -12,10 +12,18 @@
         <div>
           <ul>
             <li>
-              <a href="https://mail.google.com/mail/u/0/#inbox"> Gmail </a>
+              <a
+                href="https://mail.google.com/mail/u/0/#inbox"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Gmail</a
+              >
             </li>
             <li>
-              <a href="https://www.google.co.jp/imghp?hl=ja&authuser=0&ogbl"
+              <a
+                href="https://www.google.co.jp/imghp?hl=ja&authuser=0&ogbl"
+                target="_blank"
+                rel="noopener noreferrer"
                 >Images</a
               >
             </li>
@@ -26,14 +34,18 @@
       </header>
       <section>
         <div>
-          <a href="https://www.google.com/?hl=ja">
+          <a
+            href="https://www.google.com/?hl=ja"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <img
               src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
               alt="Google"
             />
           </a>
           <input autofocus type="search" placeholder="Search" />
-          <button>Google検索</button>
+          <button>Google Search</button>
           <button>I'm Feeling Lucky</button>
         </div>
       </section>
