--- a/hiroki/css-flex-box/index.html
+++ b/hiroki/css-flex-box/index.html
@@ -8,13 +8,16 @@
   </head>
   <body>
     <main>
-      <header>
-        <div class="headerContainer">
+      <header class="header-container">
+        <div class="wrapper">
           <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 16 16"
-            width="32"
             height="32"
+            aria-hidden="true"
+            viewBox="0 0 16 16"
+            version="1.1"
+            width="32"
+            data-view-component="true"
+            class="octicon octicon-mark-github v-align-middle"
           >
             <path
               fill-rule="evenodd"
@@ -30,36 +33,43 @@
           </ul>
         </div>
       </header>
-      <section>
-        <div class="sectionContainer">
-          <div class="leftContainer">
+      <section class="section-container">
+        <div class="wrapper">
+          <div class="profile-container">
             <p class="avatar"></p>
             <p>hiroki0404508</p>
             <button>Edit profile</button>
             <p>1 follower・1 following</p>
             <p>Organizations</p>
           </div>
-          <div class="rightContainer">
-            <div>
-              <p>front-end-developer-course</p>
-              <p>Forked from Atrae/front-end-developer-course</p>
-              <button>Star</button>
+          <div class="content-container">
+            <div class="box-container">
+              <div class="box">box</div>
+              <div class="box">box</div>
+              <div class="box">box</div>
             </div>
-            <div>
-              <p>front-end-developer-course</p>
-              <p>Forked from Atrae/front-end-developer-course</p>
-              <button>Star</button>
-            </div>
-            <div>
-              <p>front-end-developer-course</p>
-              <p>Forked from Atrae/front-end-developer-course</p>
-              <button>Star</button>
+            <div class="list-container">
+              <div class="row">
+                <p>front-end-developer-course</p>
+                <p>Forked from Atrae/front-end-developer-course</p>
+                <button>Star</button>
+              </div>
+              <div class="row">
+                <p>front-end-developer-course</p>
+                <p>Forked from Atrae/front-end-developer-course</p>
+                <button>Star</button>
+              </div>
+              <div class="row">
+                <p>front-end-developer-course</p>
+                <p>Forked from Atrae/front-end-developer-course</p>
+                <button>Star</button>
+              </div>
             </div>
           </div>
         </div>
       </section>
-      <footer>
-        <div class="footerContainer">
+      <footer class="footer-container">
+        <div class="wrapper">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 16 16"
